manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "mirrorbot-610a"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "mirrorbot-610a"
  template:
    metadata:
      labels:
        app: "mirrorbot-610a"
    spec:
      containers:
        - name: "mirrorbot-610a"
          image: "bmirrorbot.azurecr.io/mirrorbot"
          ports:
          - containerPort: 80
